--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-    background: "https://wallpaperaccess.com/full/3053366.png";
+    background-image: url('https://wallpaperaccess.com/full/3053366.png');
     cursor: url("cursor.ico"), default;
     margin: 0;
 }
