--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html, body {
 	
-    background-image: url('https://wallpaperaccess.com/full/3053366.png');
+    background-image: url('wallpaperaccess.com/full/3053366.png');
     cursor: url("cursor.ico"), default;
     margin: 0;
 }
