--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 html, body {
+background-color: #191D21;
     background-image: url('https://wallpaperaccess.com/full/3053366.png');
     cursor: url("cursor.ico"), default;
     margin: 0;
