--- a/css/hex.css
+++ b/css/hex.css
@@ -8,7 +8,8 @@
     width: 100%;
     height: 100vh;
     position: relative;
-    background: url('../img/background.png") 75% 0% /140%;
+    background: url(https://radar-bot.xyz/img/background.png) 75% 0% /140%;
+    animation: bg 25s linear infinite paused;
 }
 
 .bg {
