--- a/css/commands.css
+++ b/css/commands.css
@@ -43,7 +43,7 @@ code {
   justify-content: center;
 }
 .premium {
-  color: #f96854;
+  color: #28A745;
   font-weight: bold;
   display: block;
 }
