--- a/css/commands.css
+++ b/css/commands.css
@@ -6,7 +6,7 @@
   --lightgray: #3f444a;
   --lightergray: #ddd;
   --blue: #007bff;
-  --patreon-color: #f96854;
+  --patreon-color: #54e9f9;
 }
 html {
   box-sizing: border-box
